--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -121,7 +121,63 @@ nav a:hover{
 }
 #whoWeAre{
     color:rgb(37, 37, 42);
-    margin:0 1em 0 1em;
     background-color:#a7a7a7;
-    padding: 2em 1em;
+    display:flex;
+    flex-direction:row;
+    text-align:center;
+}
+
+.subjectBlock {
+    display: inline-block;
+    width:50%;
+}
+.subjectBlock h2 {
+    margin: 2em 1em 0.5em 1em;
+}
+
+.subjectBlock img{
+width:100%;
+}
+#actions{
+    text-align:center;
+    color:#a7a7a7;
+    background-color:rgb(37, 37, 42);
+    display:flex;
+    flex-direction:row;
+}
+#help{
+    color:rgb(37, 37, 42);
+    background-color:#a7a7a7;
+    display:flex;
+    flex-direction:row;
+    text-align:center;
+}
+
+#contact{
+    background-color:#0f0e0e;
+    color: rgb(253, 200, 178);
+    padding: 2em;
+}
+
+.contactCards{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.buttonTop {
+    position:relative;
+    left:90%;
+    border: solid rgb(253, 200, 178);
+    border-radius: 3px;
+    background-color:rgb(253, 200, 178);
+    color:black;
+    width:fit-content;
+}
+.buttonTop:hover{
+    background-color:#DF7861;
+    margin-right:10px;
+    margin-top:10px;
+    border: solid #DF7861;
+    transition: background-color 0.5s,border 0.5s;
 }
