--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -60,11 +60,6 @@ nav a:hover{
 .p-menu1{
     z-index:3;
 }
-@media (min-width: 880px) {
-    .p-menu1{
-    display:none;
-    }
-}
 
 /* background with intro */
 .mainSection{
@@ -82,6 +77,7 @@ nav a:hover{
 .content{
     grid-column: 2 / span 4; 
     grid-row: 3 / span 1;
+    font-size: 1.5vw;
     border-left: 2px double white;
     border-radius: 5px;
     background-color: #FFC54D;
@@ -276,6 +272,8 @@ width:100%;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
     opacity:0.8;
+    padding-right:5px;
+    padding-left:5px;
   }
   
   .menu1 a:first-child {
@@ -300,10 +298,16 @@ width:100%;
     transition: all 0.3s ease;
   }
 /* Media queries */
-@media (max-width: 880px) {
-    nav ul {
-        display:none;
+@media (min-width: 660px) {
+    .p-menu1{
+    display:none;
     }
+}
+@media (max-width: 880px) {
+    nav ul li{
+        font-size: 1.1em;
+    }
+    
     nav {
       margin-right:0;  
     }
@@ -314,4 +318,15 @@ width:100%;
     .buttonTop {
         grid-column: 10 / span 2; 
     }
+    .content{
+        font-size: 0.8em;
+        grid-column: 2 / span 6; 
+
+    }
+}
+@media (max-width: 660px) {
+    nav ul {
+    display:none;
+    }
+
 }
