--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -298,7 +298,7 @@ width:100%;
     transition: all 0.3s ease;
   }
 /* Media queries */
-@media (min-width: 660px) {
+@media (min-width: 681px) {
     .p-menu1{
     display:none;
     }
@@ -324,9 +324,62 @@ width:100%;
 
     }
 }
-@media (max-width: 660px) {
+@media (max-width: 680px) {
     nav ul {
     display:none;
     }
-
+    #contact h2 {
+        margin-left:1em;
+    }
+    #contact{
+        font-size:0.7em;
+    }
+    .blockImg {
+        display:none;
+    }
+    #whoWeAre {
+        display:block;
+        background-image: url("../Img/ChemistryFlasksClear.jpeg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    #whoWeAre .subjectBlock {
+        background-color:#FFC54D;
+        margin:1em 0;
+        border: 3px double white;
+        border-radius: 5px;
+        opacity:0.9;
+    }
+    #actions {
+        display:block;
+        background-image: url("../Img/chemistryLabBackgroundCropped.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    #actions .subjectBlock {
+        background-color:#FFC54D;
+        margin:1em 0;
+        border: 3px double white;
+        border-radius: 5px;
+        opacity:0.9;
+    }
+    #help {
+        display:block;
+        background-image: url("../Img/WhiteBoard.avif");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    #help .subjectBlock {
+        background-color:#FFC54D;
+        margin:1em 0;
+        border: 3px double white;
+        border-radius: 5px;
+        opacity:0.9;
+    }
+    .subjectImg {
+        display: none;
+    }
+    .subjectBlock h2 {
+        margin: 1em 0.5em 0.25em 0.5em;
+    }
 }
