--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -146,7 +146,25 @@ width:100%;
     text-align:center;
 }
 
-#contact{
+#ChemistryContent {
+    background-color:#BD4291;
+    color:rgb(56,56,56);
+    padding:1em;
+}
+.browse a{
+    color:white;
+    font-size:1em;
+    padding:0.5em 0.25em;
+    border-radius:5px;
+    background-color:rgb(56,56,56);
+    text-decoration: none;
+}
+.browse a:hover {
+    background-color:rgb(92, 46, 80);
+    transition: background-color 0.5s;
+}
+
+#contact{ 
     background-color:#53BF9D;
     color: rgb(56, 56, 56);
     width:100%;
