--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -90,21 +90,13 @@ nav a:hover{
     align-items: center;
     justify-content: space-between;
 }
-.content a{
-    color:rgb(56,56,56);
-    text-decoration: none;
-}
 .content:hover{
-    background-color: #BD4291;
+    background-color: rgb(56,56,56);
+    color:white;
     opacity:1;
-    padding-right:10px;
-    margin-top:10px;
-    transition: background-color 0.5s;
+    transition: background-color 0.5s, color 0.5s;
 }
-.content a:hover{
-    color:black;
-    transition: color 0.5s;
-}
+
 .divider{
     height:2em;
     background-color:#53BF9D;
