--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -43,7 +43,6 @@ nav ul{
 nav ul li{
     font-size: 1.5em;
     margin-right:0.5em;
-    margin-right:0.5em;
 }
 
 nav ul li+li::before{
@@ -54,7 +53,7 @@ nav a {
     text-decoration: none;
 }
 nav a:hover{
-    color:black;
+    color:white;
     transition: color 0.5s;
 }
 .p-menu1{
