--- a/Resources/Css/styles.css
+++ b/Resources/Css/styles.css
@@ -339,7 +339,7 @@ width:100%;
     }
     #whoWeAre {
         display:block;
-        background-image: url("../Img/ChemistryFlasksClear.jpeg");
+        background-image: url("../Img/LabPicture.jpg");
         background-repeat: no-repeat;
         background-size: cover;
     }
